fixed test case